--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
-body {
-     background-color:#1D2B76;
-color:white}
-<title> Document</title>
+*{
+     margin: 0 16px;
+     padding:24px 0;
+}
+
+.cabeçalho {
+     background-color:#1D2B76; 
+     color: white;
+     display:flex;
+     justify-content: space-around;
+     padding:24px 0;
+     font-size:24px;}
+
+.cabeçalho-imagem {
+     width: 20%;}
+
+.cabeçalho-lista-item{
+     display:inline-block;
+}
+
+.escola {
+     background-image: linear-gradient(#3E4EA5,#4DBBE7);
+}
